--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html, body{
     background-color: var(--pale-blue);
     font-family: 'Red Hat Display', sans-serif;
     height: 100%;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
